--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "theme-change": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +42,7 @@
     "@headlessui/react": "^1.7.4",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
+    "daisyui": "^2.39.1",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
