--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.1.3",
     "daisyui": "^2.40.1",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "react-hook-form": "^7.39.4",
     "tailwindcss": "^3.2.1"
   }
 }
